# ai-sre-portfolio

./: .env.example  .gitignore  QUICK_START.md  README.md  STATUS.md  setup.sh
builds/ai-sre-readiness-checker/: BUILD.md  README.md  __main__.py  demo.sh  pyproject.toml
builds/ai-sre-readiness-checker/checklists/: production_ready.yaml  startup_sre.yaml
builds/ai-sre-readiness-checker/src/: __init__.py  cli.py  config.py  evaluator.py
builds/ai-sre-readiness-checker/tests/: test_evaluator.py
builds/azure-alert-analyzer/: README.md  demo.sh  pyproject.toml  requirements.txt
builds/azure-alert-analyzer/azure_alert_analyzer/: __init__.py  analyzer.py  cli.py
builds/azure-alert-analyzer/tests/: test_analyzer.py
builds/azure-cost-analyzer/: README.md  demo.sh  pyproject.toml  requirements.txt
builds/azure-cost-analyzer/azure_cost_analyzer/: __init__.py  analyzer.py  cli.py
builds/azure-cost-analyzer/tests/: test_analyzer.py
builds/hackathon-tracker/: .env.example  GITLAB_HACKATHON.md  README.md  demo.sh  gitlab_interactive.py  pyproject.toml  requirements.txt  scan_gitlab.py
builds/hackathon-tracker/hackathon_tracker/: __init__.py  cli.py  tracker.py
builds/hackathon-tracker/tests/: test_tracker.py
builds/sreguardai/: Dockerfile  README.md  cli_client.py  demo.sh  pyproject.toml
builds/sreguardai/app/: main.py
builds/sreguardai/app/api/: router.py
builds/sreguardai/app/core/: logging.py  ollama_client.py
builds/sreguardai/app/models/: prompt.py
builds/sreguardai/tests/: test_proxy.py
builds/ssl-expiry-checker/: README.md  demo.sh  pyproject.toml  requirements.txt
builds/ssl-expiry-checker/ssl_expiry_checker/: __init__.py  cli.py  ssl_checker.py
builds/ssl-expiry-checker/tests/: test_ssl_checker.py
problems/: problems_2026-04-05.json
projects/: project_2026-04-05.md  project_2026-04-06.md
prompts/: meta-prompt.md
scripts/: extract_problems.py  generate.sh  generate_tools.py  systemd-status.sh
systemd/: ai-sre-daily.service  ai-sre-daily.timer  ai-sre-portfolio.service  ai-sre-portfolio.timer
tools/ai-sre-readiness-checker/: config.py  main.py  requirements.txt  tool_spec.json
tools/sreguardai/: config.py  main.py  tool_spec.json
tools/vendorleakguard/: config.py  main.py  requirements.txt  tool_spec.json
